--- a/assets/scss/global/_defaults.scss
+++ b/assets/scss/global/_defaults.scss
@@ -13,7 +13,7 @@
 
 html {
   min-width: 300px;
-  font-size: 16px;
+  font-size: 14px;
   box-sizing: border-box;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
@@ -31,6 +31,7 @@ body {
   width: 100%;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  background-color: get-color(light);
 
   &.modal-open {
     overflow-y: hidden;
