--- a/assets/scss/global/_img.scss
+++ b/assets/scss/global/_img.scss
@@ -2,7 +2,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-color: get-color('light');
+  // background-color: get-color('light');
 }
 
 .img--radius-1 {
