--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -5,7 +5,7 @@
 @use "sass:math";
 
 // CONSTANTS -- DO NOT CHANGE CONSTANTS
-$REM: 16; // DO NOT CHANGE THIS
+$REM: 14; // DO NOT CHANGE THIS
 
 // VARIABLES -- CHANGE THESE TO FIT THE DESIGN
 $theme-colors: (
@@ -14,7 +14,7 @@ $theme-colors: (
   primary: #339A69,
   secondary: #2E9DA6,
   accent: #2E9DA6,
-  meta: #D4D3DF,
+  meta: #C4C4C4,
   light: #f5f5f5,
   dark: #686868,
   line: #dbdbdb,  
@@ -22,7 +22,7 @@ $theme-colors: (
 
 $container-max-width: 1440px;
 
-$text-base-size: math.div(17,$REM)+rem; 
+$text-base-size: 14px; //math.div(17,$REM)+rem; 
 
 // typography
 
@@ -31,11 +31,11 @@ $heading-font: "Roboto", Helvetica, Arial, sans-serif;
 
 
 //  'math.div(PX,$REM)+rem' automatically computes the fontsize in PX to rem :)
-$fs-xs: (null: (math.div(9,$REM)+rem, 1.5, 1rem), l: (math.div(9,$REM)+rem, 1.5, 1rem)); // todo: add 'm' breakpoint
-$fs-s: (null: (math.div(11,$REM)+rem, 1.5, 1rem), l: (math.div(11,$REM)+rem, 1.5, 1rem));
+$fs-xs: (null: (math.div(11,$REM)+rem, 1.5, 1rem), l: (math.div(11,$REM)+rem, 1.5, 1rem)); // todo: add 'm' breakpoint
+$fs-s: (null: (math.div(12.5,$REM)+rem, 1.5, 1rem), l: (math.div(12.5,$REM)+rem, 1.5, 1rem));
 $fs-m: (null: (math.div(14,$REM)+rem, 1.5,	0.9rem,), l: (math.div(14,$REM)+rem, 1.45, 1rem));
-$fs-l: (null: (math.div(15,$REM)+rem, 1.0, 1rem,), l: (math.div(15,$REM)+rem, 1.4, 1rem));
-$fs-xl: (null: (math.div(16,$REM)+rem, 1.5, 1.2rem), l: (math.div(16,$REM)+rem, 1.45, 1.5rem));
+$fs-l: (null: (math.div(15,$REM)+rem, 1.4, 1rem,), l: (math.div(15,$REM)+rem, 1.4, 1rem));
+$fs-xl: (null: (math.div(16,$REM)+rem, 1.4, 1.2rem), l: (math.div(16,$REM)+rem, 1.45, 1.5rem));
 $fs-2xl: (null: (math.div(18,$REM)+rem, 1.45, 1.5rem), l: (math.div(18,$REM)+rem, 1.4, 1.5rem));
 $fs-3xl: (null: (math.div(23,$REM)+rem, 1.25, 1.5rem),l: (math.div(23,$REM)+rem, 1.2, 1.5rem));
 $fs-4xl: (null: (math.div(23,$REM)+rem, 1.3, 1.5rem), l: (math.div(23,$REM)+rem, 1.2, 1.5rem));
