--- a/assets/scss/global/_hr.scss
+++ b/assets/scss/global/_hr.scss
@@ -1,7 +1,9 @@
 hr {
+  width: 100%;
+  height: 1px;
   border: none;
   color: transparent;
   border-style: solid;
-  border-bottom: 1px solid get-color(meta);
-  margin: 2rem 0;
+  border-bottom: 1px solid get-color(line);
+  margin: 0;
 }
