--- a/assets/scss/global/_page.scss
+++ b/assets/scss/global/_page.scss
@@ -1,6 +1,6 @@
 .page {
   position: relative;
-  padding-bottom: 52px;
+  margin-bottom: 52px;
   min-height: 100vh; //calc(100vh - 52px);
 
   &--white {
