--- a/assets/scss/global/_page.scss
+++ b/assets/scss/global/_page.scss
@@ -1,7 +1,7 @@
 .page {
   position: relative;
   margin-bottom: 52px;
-  min-height: 100vh; //calc(100vh - 52px);
+  min-height: calc(100vh - 52px);
 
   &--white {
     background-color: #fff;
