--- a/assets/scss/global/_inputs.scss
+++ b/assets/scss/global/_inputs.scss
@@ -36,7 +36,7 @@
             justify-content: center;
             align-items: center;
             min-height: 111px;
-            border: 2px dashed get-color(base-text);
+            border: 2px dashed rgba(#666, 0.5);
         }
 
         &--textarea {
@@ -47,12 +47,17 @@
         &--dropdown {
             position: relative;
             overflow: hidden;
-            
+
+            &--list {
+
+            }
+
             &::after {
                 position: absolute;
-                content: '0';
-                right: 0;
-                top: 8px;
+                content: "\e90c";
+                font-family: 'icomoon-helix';
+                right: 8px;
+                top: 12px;
             }
         }
     }
