--- a/assets/scss/global/_defaults.scss
+++ b/assets/scss/global/_defaults.scss
@@ -30,7 +30,7 @@ body {
   width: 100%;
   scrollbar-width: none;
   -ms-overflow-style: none;
-  background-color: get-color(light);
+  background-color: #f1f1f1;
   -webkit-tap-highlight-color: transparent;
 
   &.modal-open {
