--- a/assets/scss/vars.scss
+++ b/assets/scss/vars.scss
@@ -15,11 +15,11 @@ $theme-colors: (
   secondary: #2E9DA6,
   accent: #2E9DA6,
   meta: #C4C4C4,
-  light: #f5f5f5,
+  light: #eee, // f5
   dark: #686868,
-  line: #f1f1f1,
+  line: #eee, // f1
   label-a: #02A551,
-  label-b:   #4FB748,
+  label-b:   #4FB748, 
   label-c: #BFD62E,
   label-d: #FEF102,
   label-e: #FDB813,
@@ -38,16 +38,16 @@ $heading-font: "Roboto", Helvetica, Arial, sans-serif;
 
 
 //  'math.div(PX,$REM)+rem' automatically computes the fontsize in PX to rem :)
-$fs-xs: (null: (math.div(11,$REM)+rem, 1.5, 1rem), l: (math.div(11,$REM)+rem, 1.5, 1rem)); // todo: add 'm' breakpoint
-$fs-s: (null: (math.div(12.5,$REM)+rem, 1.5, 1rem), l: (math.div(12.5,$REM)+rem, 1.5, 1rem));
-$fs-m: (null: (math.div(14,$REM)+rem, 1.5,	0.9rem,), l: (math.div(14,$REM)+rem, 1.45, 0.2rem));
-$fs-l: (null: (math.div(16,$REM)+rem, 1.4, 1rem,), l: (math.div(16,$REM)+rem, 1.4, 1rem));
-$fs-xl: (null: (math.div(16,$REM)+rem, 1.4, 1.2rem), l: (math.div(16,$REM)+rem, 1.45, 1.5rem));
-$fs-2xl: (null: (math.div(18,$REM)+rem, 1.45, 1.5rem), l: (math.div(18,$REM)+rem, 1.4, 1.5rem));
-$fs-3xl: (null: (math.div(23,$REM)+rem, 1.25, 1.5rem),l: (math.div(23,$REM)+rem, 1.2, 1.5rem));
-$fs-4xl: (null: (math.div(23,$REM)+rem, 1.3, 1.5rem), l: (math.div(23,$REM)+rem, 1.2, 1.5rem));
-$fs-5xl: (null: (math.div(23,$REM)+rem, 1.15, 1.5rem), l: (math.div(23,$REM)+rem, 1.1, 1.5rem));
-$fs-6xl: (null: (math.div(23,$REM)+rem, 1.2, 1.5rem), l: (math.div(23,$REM)+rem, 1.15, 1.5rem));
+$fs-xs: (null: (math.div(11,$REM)+rem, 1.5, 0rem), l: (math.div(11,$REM)+rem, 1.5, 0rem)); // todo: add 'm' breakpoint
+$fs-s: (null: (math.div(12.5,$REM)+rem, 1.5, 0rem), l: (math.div(12.5,$REM)+rem, 1.5, 0rem));
+$fs-m: (null: (math.div(14,$REM)+rem, 1.5,	0.5rem,), l: (math.div(14,$REM)+rem, 1.45, 0.5rem));
+$fs-l: (null: (math.div(16,$REM)+rem, 1.4, 0rem,), l: (math.div(16,$REM)+rem, 1.4, 0rem));
+$fs-xl: (null: (math.div(16,$REM)+rem, 1.4, 0rem), l: (math.div(16,$REM)+rem, 1.45, 0rem));
+$fs-2xl: (null: (math.div(18,$REM)+rem, 1.45, 0rem), l: (math.div(18,$REM)+rem, 1.4, 0rem));
+$fs-3xl: (null: (math.div(23,$REM)+rem, 1.25, 0rem),l: (math.div(23,$REM)+rem, 1.2, 0rem));
+$fs-4xl: (null: (math.div(23,$REM)+rem, 1.3, 0rem), l: (math.div(23,$REM)+rem, 1.2, 0rem));
+$fs-5xl: (null: (math.div(23,$REM)+rem, 1.15, 0rem), l: (math.div(23,$REM)+rem, 1.1, 0rem));
+$fs-6xl: (null: (math.div(23,$REM)+rem, 1.2, 0rem), l: (math.div(23,$REM)+rem, 1.15, 0rem));
 
 $ratio-helpers-prefix: '.ratio-';
 $aspect-ratios: (
