--- a/assets/scss/global/_inputs.scss
+++ b/assets/scss/global/_inputs.scss
@@ -9,6 +9,7 @@
   outline: none;
   font-size: $input-font-size;
   border-radius: 4px;
+  font-style: normal !important;
 
   &::placeholder {
     font-style: italic;
@@ -35,7 +36,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 111px;
+      min-height: 200px;
       border: 2px dashed rgba(#666, 0.5);
     }
 
@@ -48,8 +49,7 @@
       position: relative;
       overflow: hidden;
 
-      &--list {
-      }
+      &--list {}
 
       &::after {
         position: absolute;
