--- a/assets/scss/global/_page.scss
+++ b/assets/scss/global/_page.scss
@@ -1,6 +1,7 @@
 .page {
   position: relative;
   padding-bottom: 52px;
+  // padding-top: 6px;
   min-height: 100vh; // calc(100vh - 52px);
   // display: flex;
   // flex-direction: column;
@@ -10,7 +11,8 @@
     background-color: #fff;
   }
 
-  &__footer {}
+  &__footer {
+  }
 
   &--placeholder {
     min-height: 80vh; // approx...
@@ -23,7 +25,7 @@
       font-style: italic;
     }
 
-    >div {
+    > div {
       text-align: center;
     }
   }
