--- a/assets/css/_theme.scss
+++ b/assets/css/_theme.scss
@@ -84,7 +84,7 @@ $aspect-ratios: (
   "21x9": calc(9 / 21 * 100%),
   // additional ratios:
   // "3x4": calc(4 / 3 * 100%),
-  // "3x1": calc(1 / 3 * 100%),,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+  // "3x1": calc(1 / 3 * 100%),
 );
 
 // buttons
